--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/compat": "^3.3.8",
     "import": "^0.0.6",
     "primevue": "^3.41.0",
+    "sass": "^1.69.5",
     "vue": "^3.3.8"
   },
   "devDependencies": {
